new gallery changes

--- a/slider_thumbnail/index.html
+++ b/slider_thumbnail/index.html
@@ -4,77 +4,10 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <style type="text/css">
-            *{
-                box-sizing: border-box;
-            }
-            .classic-slider{
-                font-size: 0;
-                width: 58%;
-            }
-            .c-slider-left,
-            .c-slider-right{
-                font-size: 14px;
-                display: inline-block;
-                vertical-align: top;
-                height: 500px;
-            }
-            .c-slider-left > ul{
-                list-style: none;
-                margin: 0;
-            }
-            .c-slider-left{
-                width: 160px;   
-                overflow-y: auto;
-            }
-            .c-slider-right{
-                width: calc(100% - 160px);   
-            }
-            .c-slider-right{
-                padding-left: 10px;
-            }
-            .c-slider-inner{
-                position: relative;
-                height: 100%;
-                width: 100%;
-                border: 1px solid #EFEFEF;
-                display: -webkit-box;
-                display: -ms-flexbox;
-                display: flex;
-            }
-            .c-small-img,
-            .c-big-img{
-                max-height: 100%;
-                max-width: 100%;
-                -webkit-transition: .3s;
-                -ms-transition: .3s;
-                transition: .3s;
-            }
-            .c-small-img{
-                cursor: pointer;
-            }
-            .c-small-img:hover,
-            .c-small-img.active{
-                filter:brightness(50%);
-            }
-            .c-big-img {
-                margin: auto;
-            }
-            .c-controlls > div{
-                position: absolute;
-                top: 45%;
-            }
-            .c-controlls .c-left{
-                left: 0;
-            }
-            .c-controlls .c-right{
-                right: 0;
-            }
-        </style>
+        <link href="css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div class="classic-slider">
+        <div class="classic-slider" style="display: table;margin: auto;">
 
             <div class="c-slider-left">
                 <ul class="list-inline">
@@ -101,7 +34,7 @@
                     <li>
                         <img src="images/big-img.jpg" alt="" class="c-small-img img-responsive"/>
                     </li>
-                    
+
                 </ul>
             </div>
             <div class="c-slider-right">
@@ -118,5 +51,8 @@
                 </div>
             </div>
         </div>
+        
+        <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
+        <script src="js/slider.js" type="text/javascript"></script>
     </body>
 </html>
