--- a/thumbnail-slider_multiple-item/index.html
+++ b/thumbnail-slider_multiple-item/index.html
@@ -4,6 +4,7 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="../thumbnail-slider_single-item/css/zoomer/jquery.fancybox.min.css" rel="stylesheet" type="text/css"/>
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
@@ -41,42 +42,58 @@
                     <ul class="list-inline">
                         <li class="active">
                             <div class="c-slide">
-                                <img class="zoom_07" src="images/big-img1.jpeg" data-zoom-image="images/big-img1.jpeg"/>
+                                <a data-fancybox="gallery" href="images/big-img1.jpeg">
+                                    <img class="zoom_07" src="images/big-img1.jpeg" data-zoom-image="images/big-img1.jpeg"/>
+                                </a>
                             </div>
                         </li>
                         <li>
                             <div class="c-slide">
-                                <img class="zoom_07" src="images/big-img.jpg" data-zoom-image="images/big-img.jpg"/>
+                                <a data-fancybox="gallery" href="images/big-img.jpg">
+                                    <img class="zoom_07" src="images/big-img.jpg" data-zoom-image="images/big-img.jpg"/>
+                                </a>
                             </div>
                         </li>
                         <li>
                             <div class="c-slide">
-                                <img class="zoom_07" src="images/big-img2.jpg" data-zoom-image="images/big-img2.jpg"/>
+                                <a data-fancybox="gallery" href="images/big-img2.jpg">
+                                    <img class="zoom_07" src="images/big-img2.jpg" data-zoom-image="images/big-img2.jpg"/>
+                                </a>
                             </div>
                         </li>
                         <li>
                             <div class="c-slide">
-                                <img class="zoom_07" src="images/big-img3.jpg" data-zoom-image="images/big-img3.jpg"/>
+                                <a data-fancybox="gallery" href="images/big-img3.jpg">
+                                    <img class="zoom_07" src="images/big-img3.jpg" data-zoom-image="images/big-img3.jpg"/>
+                                </a>
                             </div>
                         </li>
                         <li class="">
                             <div class="c-slide">
-                                <img class="zoom_07" src="images/big-img.jpg" data-zoom-image="images/big-img.jpg"/>
+                                <a data-fancybox="gallery" href="images/big-img.jpg">
+                                    <img class="zoom_07" src="images/big-img.jpg" data-zoom-image="images/big-img.jpg"/>
+                                </a>
                             </div>
                         </li>
                         <li>
                             <div class="c-slide">
-                                <img class="zoom_07" src="images/big-img1.jpeg" data-zoom-image="images/big-img1.jpeg"/>
+                                <a data-fancybox="gallery" href="images/big-img1.jpeg">
+                                    <img class="zoom_07" src="images/big-img1.jpeg" data-zoom-image="images/big-img1.jpeg"/>
+                                </a>
                             </div>
                         </li>
                         <li>
                             <div class="c-slide">
-                                <img class="zoom_07" src="images/big-img2.jpg" data-zoom-image="images/big-img2.jpg"/>
+                                <a data-fancybox="gallery" href="images/big-img2.jpg">
+                                    <img class="zoom_07" src="images/big-img2.jpg" data-zoom-image="images/big-img2.jpg"/>
+                                </a>
                             </div>
                         </li>
                         <li>
                             <div class="c-slide">
-                                <img class="zoom_07" src="images/big-img3.jpg" data-zoom-image="images/big-img3.jpg"/>
+                                <a data-fancybox="gallery" href="images/big-img3.jpg">
+                                    <img class="zoom_07" src="images/big-img3.jpg" data-zoom-image="images/big-img3.jpg"/>
+                                </a>
                             </div>
                         </li>
                     </ul>
@@ -94,6 +111,7 @@
 
         <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
         <script src="js/Zoomer/jquery.elevateZoom-3.0.8.min.js" type="text/javascript"></script>
+        <script src="../thumbnail-slider_single-item/js/Zoomer/jquery.fancybox.min.js" type="text/javascript"></script>
         <script src="js/slider.js" type="text/javascript"></script>
     </body>
 
