--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
         <div class="calc-outer">
             <div class="calculator">
+                <div class="result">
+                  Result: 
+                  <span>12</span>
+                </div>
                 <div class="calculations">
                     <input type="text" autocomplete="off" dir="ltr" id="calc_input" />
                 </div>
