--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-      <div class="test"></div>
-        <h1 style="text-align: center;color: #fff;">Calculator</h1>
+        <h1 style="text-align: center;">Calculator</h1>
 
         <div class="calc-outer">
             <div class="calculator">
                 <div class="result">
-                  Result: 
-                  <span>12</span>
+                  Result:
+                  <span></span>
                 </div>
                 <div class="calculations">
                     <input type="text" autocomplete="off" dir="ltr" id="calc_input" />
@@ -22,25 +21,25 @@
                 <div class="calc-buttons">
                     <ul>
                         <li>
-                            <label class="main_input">
+                            <label class="main_input btn">
                                 <input type="radio" name="calcinput" value="7"/>
                                 <span>7</span>
                             </label>
                         </li>
                         <li>
-                            <label class="main_input">
+                            <label class="main_input btn">
                                 <input type="radio" name="calcinput" value="8"/>
                                 <span>8</span>
                             </label>
                         </li>
                         <li>
-                            <label class="main_input">
+                            <label class="main_input btn">
                                 <input type="radio" name="calcinput" value="9"/>
                                 <span>9</span>
                             </label>
                         </li>
                         <li>
-                            <label class="main_input devide">
+                            <label class="main_input devide btn">
                                 <input type="radio" name="calcinput" value="/"/>
                                 <span>/</span>
                             </label>
@@ -48,51 +47,51 @@
                     </ul>
                     <ul>
                         <li>
-                            <label class="main_input">
+                            <label class="main_input btn">
                                 <input type="radio" name="calcinput" value="4"/>
                                 <span>4</span>
                             </label>
                         </li>
                         <li>
-                            <label class="main_input">
+                            <label class="main_input btn">
                                 <input type="radio" name="calcinput" value="5"/>
                                 <span>5</span>
                             </label>
                         </li>
                         <li>
-                            <label class="main_input">
+                            <label class="main_input btn">
                                 <input type="radio" name="calcinput" value="6"/>
                                 <span>6</span>
                             </label>
                         </li>
                         <li>
-                            <label class="main_input multiply">
+                            <label class="main_input multiply btn">
                                 <input type="radio" name="calcinput" value="x"/>
-                                <span>x</span>
+                                <span>*</span>
                             </label>
                         </li>
                     </ul>
                     <ul>
                         <li>
-                            <label class="main_input">
+                            <label class="main_input btn">
                                 <input type="radio" name="calcinput" value="1"/>
                                 <span>1</span>
                             </label>
                         </li>
                         <li>
-                            <label class="main_input">
+                            <label class="main_input btn">
                                 <input type="radio" name="calcinput" value="2"/>
                                 <span>2</span>
                             </label>
                         </li>
                         <li>
-                            <label class="main_input">
+                            <label class="main_input btn">
                                 <input type="radio" name="calcinput" value="3"/>
                                 <span>3</span>
                             </label>
                         </li>
                         <li>
-                            <label class="main_input minus">
+                            <label class="main_input minus btn">
                                 <input type="radio" name="calcinput" value="-"/>
                                 <span>-</span>
                             </label>
@@ -100,19 +99,19 @@
                     </ul>
                     <ul style="margin-bottom: 0;">
                         <li>
-                            <label class="main_input">
+                            <label class="main_input btn btn">
                                 <input type="radio" name="calcinput" value="0"/>
                                 <span>0</span>
                             </label>
                         </li>
                         <li>
-                            <label class="main_input dot">
+                            <label class="main_input dot btn">
                                 <input type="radio" name="calcinput" value="."/>
                                 <span>.</span>
                             </label>
                         </li>
                         <li>
-                            <label class="main_input plus">
+                            <label class="main_input plus btn">
                                 <input type="radio" name="calcinput" value="+"/>
                                 <span>+</span>
                             </label>
